--- a/web/picoweb/static/css/responsive/desktop.css
+++ b/web/picoweb/static/css/responsive/desktop.css
@@ -65,3 +65,13 @@
         color: #adb5bd;
     }
 }
+
+@media (min-width: 1000px) and (max-width: 1100px) and (min-height: 651px) and (max-height: 800px) {
+    .scroll_movelist {
+        height: 25vh;
+        min-height: 160px;
+        max-height: 25vh;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+}
